<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />

    <EditText
        android:id="@+id/urGuess"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:autofillHints="Choose number from 0 to 20"
        android:ems="10"
        android:hint="@string/number_hint"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.067"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/confirmGuess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:textColor="@color/black"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/urGuess"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/guesses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guesses"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmGuess"
        app:layout_constraintVertical_bias="0.142" />

    <TextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guesses"
        app:layout_constraintVertical_bias="0.035" />

    <ImageButton
        android:id="@+id/restartGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/points"
        app:layout_constraintVertical_bias="0.905"
        app:srcCompat="@android:drawable/ic_popup_sync"
        android:contentDescription="@string/restart" />

    <TextView
        android:id="@+id/numberOfGuesses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@integer/zero"
        app:layout_constraintBottom_toTopOf="@+id/restartGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toEndOf="@+id/guesses"
        app:layout_constraintTop_toBottomOf="@+id/confirmGuess"
        app:layout_constraintVertical_bias="0.172" />

    <TextView
        android:id="@+id/pointsGained"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@integer/zero"
        app:layout_constraintBottom_toTopOf="@+id/restartGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toEndOf="@+id/points"
        app:layout_constraintTop_toBottomOf="@+id/confirmGuess"
        app:layout_constraintVertical_bias="0.267" />

    <Button
        android:id="@+id/leaderboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leaderboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.771"
        app:layout_constraintStart_toEndOf="@+id/restartGame"
        app:layout_constraintTop_toBottomOf="@+id/points"
        app:layout_constraintVertical_bias="0.894" />

    <Button
        android:id="@+id/log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/log_out"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292" />

    <TextView
        android:id="@+id/loginShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/purple_200"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/log_out"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.439" />

</androidx.constraintlayout.widget.ConstraintLayout>